# meld

./: .clang-format  .gitignore  CMakeLists.txt  DeveloperNotes.md  NOTICE  README.md
Modules/: Findjsonnet.cmake  NProc.cmake
docs/: comparison_to_art.md  framework_definition.md
meld/: CMakeLists.txt  concurrency.hpp  configuration.hpp  meld.cpp  module.hpp  run_meld.cpp  run_meld.hpp  source.hpp  version.cpp.in  version.hpp
meld/app/: CMakeLists.txt  load_module.cpp  load_module.hpp  meld.cpp  run.cpp  run.hpp  run_meld.cpp  run_meld.hpp  version.cpp.in  version.hpp
meld/core/: CMakeLists.txt  bound_function.hpp  cached_product_stores.hpp  common_node_options.hpp  component.hpp  concepts.hpp  concurrency.cpp  concurrency.hpp  concurrency_tags.hpp  consumer.cpp  consumer.hpp  data_level.hpp  data_processor.cpp  data_processor.hpp  declared_filter.cpp  declared_filter.hpp  declared_function.hpp  declared_monitor.cpp  declared_monitor.hpp  declared_output.cpp  declared_output.hpp  declared_predicate.cpp  declared_predicate.hpp  declared_reduction.cpp  declared_reduction.hpp  declared_splitter.cpp  declared_splitter.hpp  declared_transform.cpp  declared_transform.hpp  dot_attributes.hpp  dot_data_graph.cpp  dot_data_graph.hpp  dot_function_graph.cpp  dot_function_graph.hpp  double_bound_function.hpp  edge_maker.cpp  edge_maker.hpp  end_of_message.cpp  end_of_message.hpp  filter.cpp  (+52 more)
meld/core/detail/: filter_impl.cpp  filter_impl.hpp  form_input_arguments.hpp  port_names.hpp
meld/core/dot/: attributes.cpp  attributes.hpp  data_graph.cpp  data_graph.hpp  function_graph.cpp  function_graph.hpp
meld/core/filter/: filter_impl.cpp  filter_impl.hpp  result_collector.cpp  result_collector.hpp
meld/core/reduction/: send.hpp
meld/graph/: CMakeLists.txt  data_node.cpp  data_node.hpp  dynamic_join_node.hpp  gatekeeper_node.cpp  gatekeeper_node.hpp  make_edges.hpp  module_worker.cpp  module_worker.hpp  node.cpp  node.hpp  serial_node.hpp  serializer_node.cpp  serializer_node.hpp  transition.cpp  transition.hpp  transition_graph.cpp  transition_graph.hpp
meld/metaprogramming/: CMakeLists.txt  delegate.hpp  function_name.cpp  function_name.hpp  index_for_type.hpp  take_until.hpp  to_array.hpp  type_deduction.hpp
meld/metaprogramming/detail/: basic_concepts.hpp  ctor_reflect_types.hpp  number_output_objects.hpp  number_parameters.hpp  parameter_types.hpp  return_type.hpp
meld/model/: CMakeLists.txt  fwd.hpp  handle.hpp  level_counter.cpp  level_counter.hpp  level_hierarchy.cpp  level_hierarchy.hpp  level_id.cpp  level_id.hpp  level_order.cpp  level_order.hpp  product_matcher.cpp  product_matcher.hpp  product_store.cpp  product_store.hpp  product_store_factory.cpp  product_store_factory.hpp  products.cpp  products.hpp  qualified_name.cpp  qualified_name.hpp  transition.cpp  transition.hpp
meld/utilities/: CMakeLists.txt  cartesian_product.hpp  debug.hpp  demangle_symbol.cpp  demangle_symbol.hpp  hashing.cpp  hashing.hpp  make_edges.hpp  resource_usage.cpp  resource_usage.hpp  sized_tuple.hpp  sleep_for.hpp  string_literal.hpp  thread_counter.hpp  type_deduction.hpp  usage.cpp  usage.hpp
sand/: CMakeLists.txt  run_sand.cc  run_sand.cpp  run_sand.hh  run_sand.hpp  sand.cc.in  sand.cpp  sand.cpp.in  version.cpp.in  version.hpp
sand/core/: CMakeLists.txt  data_level.hpp  data_levels.cpp  data_levels.hpp  data_processor.cpp  data_processor.hpp  load_module.cpp  load_module.hpp  module.hh  module.hpp  module_manager.cpp  module_manager.hpp  module_owner.hpp  module_worker.cpp  module_worker.hpp  node.cpp  node.hh  node.hpp  source.cc  source.cpp  source.hh  source.hpp  source_owner.hpp  source_worker.hpp  task_scheduler.hpp  test_module.hpp  transition.cpp  transition.hpp  transition_graph.cpp  transition_graph.hpp  uses_config.hpp
test/: CMakeLists.txt  add.hpp  allowed_domains.cpp  allowed_families.cpp  cached_execution.cpp  cached_execution_source.hpp  cached_execution_t.cpp  cached_product_stores.cpp  cached_product_stores_t.cpp  cartesian_product_t.cpp  class_component.cpp  class_component_t.cpp  class_registration.cpp  concepts.cpp  concepts_t.cpp  concurrency_tags_t.cpp  data_levels.cpp  data_levels.hpp  debug.hpp  declared_transform_t.cpp  different_hierarchies.cpp  dynamic_join_t.cpp  filter.cpp  filter_impl.cpp  filter_t.cpp  framework_free_t.cpp  function_component.cpp  function_component_t.cpp  function_name.cpp  function_registration.cpp  gatekeeper_node.cpp  gatekeeper_node.hpp  gatekeeper_t.cpp  hierarchical_nodes.cpp  hierarchical_nodes_t.cpp  iterator.cpp  iterator_t.cpp  level_counting.cpp  level_hierarchy.cpp  level_id.cpp  (+41 more)
test/benchmarks/: CMakeLists.txt  accept_even_ids.cpp  accept_even_numbers.cpp  accept_fibonacci_numbers.cpp  benchmark-01.jsonnet  benchmark-02.jsonnet  benchmark-03.jsonnet  benchmark-04.jsonnet  benchmark-05.jsonnet  benchmark-06.jsonnet  benchmark-07.jsonnet  benchmark-08.jsonnet  benchmark-09.jsonnet  benchmarks_source.cpp  diamond_source.hpp  diamond_t.cpp  fibonacci_numbers.cpp  fibonacci_numbers.hpp  last_index.cpp  plus_101.cpp  plus_one.cpp  read_id.cpp  read_index.cpp  verify_difference.cpp  verify_even_fibonacci_numbers.cpp
test/max-parallelism/: CMakeLists.txt  check_parallelism.cpp  check_parallelism_cli.jsonnet  check_parallelism_cli_over_config.jsonnet  check_parallelism_config.jsonnet  check_parallelism_default.jsonnet  check_parallelism_default.jsonnet.in
test/memory-checks/: CMakeLists.txt  many_events.cpp  many_events_t.cpp
test/mock-workflow/: CMakeLists.txt  G4Stage1.libsonnet  G4Stage2.libsonnet  MC_truth_algorithm.cpp  SinglesGen.libsonnet  algorithm.hpp  algorithm.libsonnet  ion_and_scint.cpp  largeant.cpp  mock-workflow.jsonnet  pd_fast_sim.cpp  source.cpp  three_tuple_algorithm.cpp  timed_busy.cpp  timed_busy.hpp  types.hpp
test/plugins/: CMakeLists.txt  add.hpp  add.json  add.jsonnet  module.cpp  module_t.cpp  output.cpp  source.cpp  source_t.cpp
test/utilities/: CMakeLists.txt  cartesian_product.cpp  sized_tuple.cpp  sleep_for.cpp  thread_counter.cpp
